--- a/serverless/package.json
+++ b/serverless/package.json
@@ -7,14 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
+    "axios": "^0.18.0",
+    "serverless": "^1.38.0",
     "serverless-offline": "^4.7.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.20",
     "@types/node": "^8.0.57",
-    "@types/request-promise-native": "^1.0.15",
     "serverless-webpack": "^5.1.1",
     "source-map-support": "^0.5.6",
     "ts-loader": "^4.2.0",
